# django-materialized-view

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: default.yml  release.yml  test.yml
django_materialized_view/: apps.py  base_model.py  models.py  processor.py  sql_functions.py
django_materialized_view/management/commands/: migrate_with_views.py
django_materialized_view/migrations/: 0001_initial.py
example_project/: requirements.txt
example_project/example_app/migrations/: 0001_initial.py  0002_materializedviewfromqueryset.py
example_project/example_app/models/: __init__.py  my_test_model.py
example_project/example_app/models/materialized_views/: materialized_view_from_queryset.py  materialized_view_from_raw_sql.py
example_project/example_app/models/materialized_views/sql_files/: materializedviewfromrawsql.sql
example_project/example_project/: settings.py  urls.py
testproject/: settings.py
testproject/tests/: factories.py  test_base_mode_tests.py
testproject/tests/management/commands/: test_migrate_with_views.py
