[metadata]
name = django-materialized-view
version = 0.1.0
url = https://github.com/muehlemann-popp/django_materialized_view
description = Plugin for django to support Materialized Views
long_description = file: README.md
description_file = README.md
author = 'Silvan Mühlemann'
author_email = 'silvan.muehlemann@muehlemann-popp.ch'
license='MIT'
classifiers =
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development
    Programming Language :: Python :: 3.9

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.0


[upload]
repository = mpom
show_response = 1