[metadata]
name = django-materialized-view
url = https://github.com/muehlemann-popp/django_materialized_view
description = Plugin for django to support Materialized Views
long_description = file: README.md
long_description_content_type = text/markdown
description_file = README.md
author = Farruh Sheripiov
author_email = farruh.sheripov@muehlemann-popp.ch
maintainer = Silvan Mühlemann
maintainer_email = silvan.muehlemann@muehlemann-popp.ch
license='MIT'
classifiers =
    Intended Audience :: Developers
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development
    Framework :: Django
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.0


[upload]
repository = mpom
show_response = 1